--- a/package.json
+++ b/package.json
@@ -34,18 +34,12 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+ "browserslist": [
+  "last 1 version",
+  "> 1%",
+  "maintained node versions",
+  "not dead"
+],
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
